fixed ghost button spacing

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -30,18 +30,6 @@ body {
 
 }
 
-
-
-/* Fix Nav Caret Align*/
-.nav-caret{
-    margin-top: 0px;
-}
-
-.home-btn {
-    text-align: center;
-}
-
-
 #head1-temp{
     color: whitesmoke;
     text-align: center;
@@ -60,9 +48,11 @@ body {
     font-weight: 400;
 }
 
-
-
 /***** GHOST BUTTONS *****/
+
+.ghost-btn-container {
+    text-align: center;
+}
 
 .ghost-btn {
     width: 150px;
@@ -81,11 +71,27 @@ body {
 .ghost-btn:hover {
     background: #F16521;
     color: #FFFFFF !important;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, .7);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .6);
 }
 
 .ghost-btn:focus {
     outline: 0 !important;
+}
+
+@media (max-width: 767px) {
+    .ghost-btn-container {
+        margin-bottom: 35px;
+    }
+
+    .ghost-btn {
+        margin: 0 8px 0;
+    }
+}
+
+@media (max-width: 399px) {
+    .ghost-btn {
+        margin-bottom: 20px;
+    }
 }
 
 /************** IDs   *************/
